fixed mail icon alignment
still no mailto:, waiting for client input

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h1.logo {
 	background-repeat: no-repeat;
 	position: absolute;
     right: 56px;
-    bottom: 19px;
+    bottom: 25px;
     width: 32px;
     height: 32px;
 }
